added questions to reading for 1 locus models

--- a/chapter-05.tex
+++ b/chapter-05.tex
@@ -219,7 +219,6 @@ allele frequency among the reproducing individuals of the previous generation. H
 	p_{t+1} = \frac{W_{11} p_t^2 + W_{12} p_tq_t}{\Wbar}
 	\label{pgen_dip}.
 \end{equation}
-
 Note that, again, the absolute value of the fitnesses is irrelevant to
 the frequency of the allele. Therefore, we can just as easily replace
 the absolute fitnesses with the relative fitnesses. That is, we may replace $W_{ij}$ by $w_{ij} = W_{ij}/W_{11}$, for instance. \\
@@ -377,11 +376,11 @@ arbitrary frequencies.\\
 \end{figure}
 
 
-\begin{tcolorbox} 
-\begin{question}
-An autosomal pesticide resistance allele is at 50\% frequency in a species of flies.  We stop using the pesticide, and within 20 years the frequency of the allele is 5\% in the new-born flies. There are two fly generations per year. Assuming that the allele affects fitness in an additive fashion, estimate the selection coefficient acting against homozygotes for the resistance allele.
-\end{question}
-\end{tcolorbox}
+%\begin{tcolorbox} 
+%\begin{question}
+%An autosomal pesticide resistance allele is at 50\% frequency in a species of flies.  We stop using the pesticide, and within 20 years the frequency of the allele is 5\% in the new-born flies. There are two fly generations per year. Assuming that the allele affects fitness in an additive fashion, estimate the selection coefficient acting against homozygotes for the resistance allele.
+%\end{question}
+%\end{tcolorbox}
 
 
 \subsubsection{Heterozygote advantage}
