fixed sqs in add var def

--- a/chapter-04.tex
+++ b/chapter-04.tex
@@ -679,10 +679,10 @@ heterozygotes into homozygotes (11), who have the same mean phenotype.  \\
 The variance in the population phenotype due to these
 additive breeding values at locus $\ell$ assuming HW proportions is
 \begin{align}
-V_{A, \ell} &= p^2 (2a_{\ell,2}) + 2pq (a_{\ell,1}+a_{\ell,1}) + q^2
-(2a_{\ell,0}) \nonumber \\
-& = 2(p a_{\ell, 1} ^2 + q a_{\ell, 2} ) \nonumber \\
-& = 2pq \alpha_{\ell}
+V_{A, \ell} &= p^2 (2a_{\ell,2})^2 + 2pq (a_{\ell,1}+a_{\ell,1})^2 + q^2
+(2a_{\ell,0})^2 \nonumber \\
+& = 2(p a_{\ell, 1}^2 + q a_{\ell, 2}^2 ) \nonumber \\
+& = 2pq \alpha_{\ell}^2
 \end{align}
 The total additive effect can
 be found by summing this additive genetic variance across loci
