Fixed result of integral in eq. (59)

--- a/chapter-02.tex
+++ b/chapter-02.tex
@@ -641,7 +641,7 @@ increasing with sample size but is doing so very slowly. To see this
 more carefully we can see that for large $n$
 \begin{equation}
 \E(T_{tot}) = \sum_{i=n-1}^1 \frac{4N}{i} \approx 4N \int_1^n \frac{1}{i} di
-= 4N \log(n-1)
+= 4N \log(n)
 \end{equation}
 here we are approximating our sum by an integral, which will work for
 large $n$. So our expected total amount of time in the genealogy
