added change t for haploid model

--- a/chapter-05.tex
+++ b/chapter-05.tex
@@ -349,10 +349,9 @@ If selection is very weak, i.e.\ $s \ll 1$, the denominator ($\wbar$) is close t
 \end{equation}
 It is instructive to compare eqn.\ \eqref{deltap_add_simpl} to the respective expression under the haploid model. To this purpose, start from the generic term for $\Delta p_t$ under the haploid model in eqn.\ \eqref{eq:deltap_haploid} and set $w_1 = 1$ and $w_2 = 1-s$. Again, assume that $s$ is small, so that eqn.\ \eqref{eq:deltap_haploid} becomes $\Delta p_t = s p_t q_t$. Hence, if $s$ is small, the diploid model of directional selection without dominance is identical to the haploid model, up to a factor of $1/2$. That factor is due to the choice of the parametrisation; we could have set $w_{11} = 1$, $w_{12} = 1-s$, and $w_{22} = 1-2s$ in diploid model instead, in which case the agreement with the haploid model would be perfect.\\
 
-From this analogy, we can borrow some insight we gained for the haploid model. Specifically, the trajectory of the frequency of allele $A_1$ in the diploid model without dominance follows a logistic growth curve similar to \eqref{eq:haploid_logistic growth}. Similarly, eqn.\ \eqref{eq:fixTimeSimpl} for the haploid model suggests that in the diploid model without dominance it takes
-
+From this analogy, we can borrow some insight we gained for the haploid model. Specifically, the trajectory of the frequency of allele $A_1$ in the diploid model without dominance follows a logistic growth curve similar to \eqref{eq:haploid_logistic growth}. Similarly, eqn.\ \ref{eq:fixTimeSimpl} for the haploid model suggests that in the diploid model without dominance it takes
 \begin{equation}
-	\tau \approx \frac{2}{s} \log(2N)
+	\tau \approx \frac{4}{s} \log(2N)
 \end{equation}
 generations for the favourable allele ($A_1$)
  to transit from its entry into the population ($p_0 =1/(2N)$)
