--- a/chapter-05.tex
+++ b/chapter-05.tex
@@ -98,15 +98,12 @@ have $p_0 = 1/N$, and we may set $p_{\tau} = 1 - 1/N$, which is very close to
 fixation. Then, plugging these values into eqn.\ \eqref{eq:estTauExplSimpl}, we
 obtain
 
-\begin{align*}
-  %% TODO: should add unsimplified expression first.
-  tau &= \frac{1}{s} \log\left( \frac{1 - \nicefrac{2}{N} + \nicefrac{1}{N^2}}{\nicefrac{1}{N^2}} \right) \\
-  % &= \frac{1}{s} \log\left( N^2 - 2N + 1 \right) \\
-  % &\approx \frac{1}{s} (\log(N) + \log(N-2)) \\
-  &\approx \frac{1}{s} (\log(N) + \log(N-2)) \\
-  &\approx \frac{2}{s} \log(N) \\
-  \label{eq:fixTimeSimpl}
-\end{align*}
+\begin{align}
+  tau &= \frac{1}{s} \log\left( \frac{1 - \nicefrac{2}{N} +
+      \nicefrac{1}{N^2}}{\nicefrac{1}{N^2}} \right) \nonumber \\
+  &\approx \frac{1}{s} (\log(N) + \log(N-2)) \nonumber \\
+  &\approx \frac{2}{s} \log(N)  \label{eq:fixTimeSimpl}
+\end{align}
 %
 where we make the approximations $N^2 - 2N + 1 \approx N^2 - 2N$ and later
 $N-2 \approx N$.
