added practice problem 2

--- a/Practice_Problems/Practice_Problems_2.tex
+++ b/Practice_Problems/Practice_Problems_2.tex
@@ -143,4 +143,9 @@ synonymous substitutions  out of 500
 bases where synonymous substitutions could occur. What is the level of
 constraint at nonsynonymous sites?
 \end{question}
+
+\begin{question}
+Explain why a difference in the marginal fitness of alleles is key to
+selection driving allele frequency change at a locus.
+\end{question}
 \end{document}
