some minor changes

--- a/Practice_Problems/Practice_Problems_2.tex
+++ b/Practice_Problems/Practice_Problems_2.tex
@@ -46,7 +46,7 @@ Assume that a typical male individual of three different genotypes
 have the following probabilities of surviving to adulthood:\\
 \begin{center}
 \begin{tabular}{ccc}
-Ho+Ho+  &	Ho+Hop 	&HopHop\\
+Ho+/Ho+  &	Ho+/Hop 	&Hop/Hop\\
 0.5	&	0.8	&	0.8\\
 \end{tabular}
 \end{center}
@@ -54,7 +54,9 @@ Assume as before that the frequency of the Hop allele is 10\% at birth, and that
 {\bf B)} How many individuals of each genotype do you expect to find in your population of males that have survived to adulthood? Show your work.\\
 
 
-Of the males who survive to reproduce, you estimate that males with the Ho+Ho+  and Ho+Hop  genotype have on average 2.5 offspring, while HopHop males have on average 1 offspring. \\
+Of the males who survive to reproduce, you estimate that males with the Ho+/Ho+
+and Ho+/Hop  genotype have on average 2.5 offspring, while Hop/Hop males have
+on average 1 offspring. \\
 
 {\bf C)} Taking into account both survival and reproduction how many
 offspring do you expect each of the three males genotypes to contribute to the total population in the next generation? \\
@@ -71,7 +73,10 @@ offspring do you expect each of the three males genotypes to contribute to the t
 \end{question}
 
 \begin{question}
-Analyzing polymorphism and divergence data for a gene you calculate the  following McDonald‐Kreitman table.
+
+Analyzing polymorphism and divergence data for a gene you calculate the
+following McDonald‐Kreitman table.
+
 \begin{center}
 \begin{tabular}{ccc}
 & Polymorphism & Substitutions\\
