added Q and equations

--- a/Practice_Problems/Equation_sheet_2.tex
+++ b/Practice_Problems/Equation_sheet_2.tex
@@ -39,6 +39,10 @@ D_{AB} = p_{AB} - p_Ap_B \nonumber
 \end{equation}
 
 \begin{equation}
+	\frac{\sqrt[t]{\prod_{i=0}^{t-1}w_{12,i}}}{\sqrt[t]{\prod_{i=0}^{t-1}w_{22,i}}} \nonumber
+\end{equation}
+
+\begin{equation}
   H_t = \left(1-\frac{1}{2N_e} \right)^tH_0 \approx H_0 e^{-\nicefrac{t}{2N_e}} \nonumber
 \end{equation}
 
@@ -78,6 +82,10 @@ R = h^2 S = V_A \beta
 \begin{equation}
 \fst =1-\frac{H_S}{H_T}.\nonumber
 %\label{eqn:F_relationships}
+\end{equation}
+
+\begin{equation}
+	\tau = -\frac{2}{s} \log \left(\frac{p_{\tau} q_0}{q_{\tau} p_0}\right)
 \end{equation}
 
 \begin{equation}
