--- a/Practice_Problems/Practice_Problems_2.tex
+++ b/Practice_Problems/Practice_Problems_2.tex
@@ -74,21 +74,27 @@ offspring do you expect each of the three males genotypes to contribute to the t
 
 \begin{question}
 
-Analyzing polymorphism and divergence data for a gene you calculate the
-following McDonald‐Kreitman table.
+Analyzing polymorphism and divergence data for a gene you calculate
+the following McDonald-Kreitman table.
 
 \begin{center}
 \begin{tabular}{ccc}
 & Polymorphism & Substitutions\\
-Synonymous & 40 & 80\\
+Synonymous& 40 & 80\\
 Nonsynonymous & 20 &  80 \\
 \end{tabular}
 \end{center}
 {\bf A)} Based on the ratio of non-synonymous to synonymous
-polymorphisms, given the 80 synonymous substitutions how many
+polymorphisms, and given the 80 synonymous substitutions, how many
 nonsynymous substitutions would you expect if this gene were evolving neutrally?\\
-{\bf B)} Is this table consistent with the gene evolving neutrally? If
+{\bf B)} Is this table consistent with the gene evolving neutrally? If
 not what could explain the results?\\
+\end{question}
+
+\begin{question}
+Consider a locus where a polymorphism is maintained due to
+heterozygote advantage.  Why is $V_A=0$ and $V_D>0$ when the allele is
+balanced at its equilibrium frequency?
 \end{question}
 
 \begin{question}
@@ -109,7 +115,6 @@ homozygotes for the “normal” (non-sickle cell) allele.\\
 The nineteenth-century notion of blending inheritance posed a problem for Darwinian evolution by natural selection, a problem which is solved by Mendelian inheritance.  Briefly explain the problem and its solution. 
 \end{question}
 
-
 \begin{question}
 An autosomal pesticide resistance allele is at 50\% frequency in a species of flies.  We stop using the pesticide, and within 20 years the frequency of the allele is 5\% in the new-born flies. There are two fly generations per year. Assuming that the allele affects fitness in an additive fashion, estimate the selection coefficient acting against homozygotes for the resistance allele.
 \end{question}
@@ -124,6 +129,17 @@ What is the probability of fixation of a unique new, neutral mutation in a popul
 
 \begin{question}
 Why is dN/dS much less than one for the majority of genes in our genome?
+\end{question}
+
+\begin{question}
+Consider a locus where a deleterious allele is present at mutation
+selection-balance in an outbred population. Assume that the drop in
+relative fitness of the heterozygotes is $hs$, and homozygotes for the
+deleterious allele is $s$. \\
+{\bf A)} In this normally outbred population, what is the mean fitness of an individual
+with an inbreeding coefficient $F$?\\
+{\bf B)} Describe how your answer to part A provides a
+quantitative basis to our ideas about inbreeding depression for fitness? 
 \end{question}
 
 \begin{question}
