added Q and equations

--- a/Practice_Problems/Practice_Problems_2.tex
+++ b/Practice_Problems/Practice_Problems_2.tex
@@ -138,8 +138,8 @@ relative fitness of the heterozygotes is $hs$, and homozygotes for the
 deleterious allele is $s$. \\
 {\bf A)} In this normally outbred population, what is the mean fitness of an individual
 with an inbreeding coefficient $F$?\\
-{\bf B)} Describe how your answer to part A provides a
-quantitative basis to our ideas about inbreeding depression for fitness? 
+{\bf B)} Briefly describe how your answer to part A provides a
+quantitative basis to our ideas about inbreeding depression for fitness.
 \end{question}
 
 \begin{question}
