updated eq sheet

--- a/Practice_Problems/Equation_sheet_2.tex
+++ b/Practice_Problems/Equation_sheet_2.tex
@@ -85,6 +85,17 @@ R = h^2 S = V_A \beta
 \end{equation}
 
 \begin{equation}
+  \fst = \frac{\mu T}{\mu T + 2N_e \mu}
+%\label{eqn:F_relationships}
+\end{equation}
+
+\begin{equation}
+  F_{IM} = \frac{1}{1 + 4N_I m}
+%\label{eqn:F_relationships}
+\end{equation}
+
+
+\begin{equation}
 	\tau = -\frac{2}{s} \log \left(\frac{p_{\tau} q_0}{q_{\tau} p_0}\right)
 \end{equation}
 
