--- a/Practice_Problems/Practice_Problems_2.tex
+++ b/Practice_Problems/Practice_Problems_2.tex
@@ -169,4 +169,28 @@ constraint at nonsynonymous sites?
 Explain why a difference in the marginal fitness of alleles is key to
 selection driving allele frequency change at a locus.
 \end{question}
+
+\begin{question}
+
+According to the multiple sample coalescent, does the expected time to
+coalescence while there are $k$ lineages decrease or increase with $k$? Why? 
+
+\end{question}
+
+
+\begin{question}
+
+  Imagine you're looking at two sister taxa (A) and (B) in a species tree, with
+  a third species (C) as an outgroup. You know the ancestral population size of
+  these two taxa (A and B) is small before they merge with (C). Does this
+  increase the chance of incomplete lineage sorting, or decrease it?
+
+\end{question}
+
+
+
+
+
+
+
 \end{document}
