Graham's changes to eqn sheet

--- a/Practice_Problems/Equation_sheet_2.tex
+++ b/Practice_Problems/Equation_sheet_2.tex
@@ -51,6 +51,12 @@ D_{AB} = p_{AB} - p_Ap_B \nonumber
 \end{equation}
 
 \begin{equation}
+\E[T_k] = \frac{2 N_e}{ {k \choose 2} },~~~~\E[T_{MRCA}] =
+4N_e(1-1/n),   \E[T_{tot}] = \sum_{k=n}^2 \frac{4N_e}{k-1}
+\end{question}
+
+
+\begin{equation}
   H = \frac{4N_e\mu}{1+4N_e\mu} \approx 4N_e\mu  \nonumber
 \end{equation}
 
